fix: mudei a identação do markdown e adicionei a descrição do projeto!

--- a/aula-1.ipynb
+++ b/aula-1.ipynb
@@ -8,7 +8,27 @@
     }
    },
    "source": [
-    "# Configuração do ambiente:"
+    "## Projeto da aula de data sience em 2025:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ADICIONAR A ORIGEM DOS DADOS\n",
+    "Este projeto faz parte da disciplina **Ciência de Dados (2025/1)** do **Instituto Federal de Rondônia**. A matéria é ministrada pelo professor [José Lucas Brandão Montes](https://github.com/zehlucas).\n",
+    "\n",
+    "Existe [outro projeto associado à disciplina](https://github.com/zehlucas/IFRO-ADS-DataScience-2025), mantido pelo professor, que contém os códigos utilizados em aula para auxiliar os alunos no acompanhamento do conteúdo.\n",
+    "\n",
+    "Optei por não seguir exatamente o formato proposto, pois o professor deixou essa escolha em aberto. Sinta-se à vontade para explorar este projeto e, caso tenha alguma dúvida, pode entrar em contato comigo.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Configuração do ambiente:"
    ]
   },
   {
@@ -145,23 +165,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploração dos dados:"
+    "## Exploração dos dados:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importado as dependencias:"
+    "#### Importado as dependencias:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib as plt"
    ]
   },
   {
