crie os primeiro elementos da proxima atividade

--- a/tarefas.ipynb
+++ b/tarefas.ipynb
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10856/2929211778.py:1: DtypeWarning: Columns (16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_21328/2929211778.py:1: DtypeWarning: Columns (16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  acidentes = pd.read_csv('./csv/acidentes_2022.csv')\n"
      ]
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "[4849 rows x 4 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "2649               56.179775  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,11 +370,270 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 📊 **Análises a serem realizadas**\n",
+    "\n",
+    "1. **Distribuição temporal dos acidentes**\n",
+    "   - Criar gráfico interativo (linha ou barras) com o número de acidentes por:\n",
+    "     - Mês\n",
+    "     - Semana\n",
+    "   - Permitir seleção de:\n",
+    "     - Estado (via menu lateral)\n",
+    "     - Intervalo de tempo:\n",
+    "       - Ano inteiro\n",
+    "       - Trimestre específico\n",
+    "       - Mês específico\n",
+    "\n",
+    "2. **Heatmap de acidentes por dia da semana e hora**\n",
+    "   - Criar heatmap com:\n",
+    "     - Linhas: dias da semana\n",
+    "     - Colunas: faixas de horário (ex.: 0–5h, 6–11h, 12–17h, 18–23h)\n",
+    "   - Mostrar concentração de acidentes por faixa temporal\n",
+    "\n",
+    "3. **Correlação entre variáveis**\n",
+    "   - Calcular e exibir matriz de correlação para o estado selecionado com as variáveis:\n",
+    "     - Quantidade de acidentes\n",
+    "     - População do município\n",
+    "     - Frota de veículos\n",
+    "     - Índice de acidentes por habitante\n",
+    "     - Índice de acidentes por veículo\n",
+    "   - Visualizar com:\n",
+    "     - `plotly.express.imshow()` ou\n",
+    "     - `seaborn.heatmap()`\n",
+    "\n",
+    "4. **Interpretação dos resultados**\n",
+    "   - Responder às seguintes perguntas:\n",
+    "     - Em que período do ano ocorrem mais acidentes?\n",
+    "     - Existe padrão em dias/horários com mais acidentes?\n",
+    "     - Há forte correlação entre acidentes, população e frota?\n",
+    "     - Quais políticas públicas poderiam ser sugeridas com base nos dados?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mes_nome</th>\n",
+       "      <th>total_acidentes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>April</td>\n",
+       "      <td>81875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>August</td>\n",
+       "      <td>86176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>December</td>\n",
+       "      <td>46079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>February</td>\n",
+       "      <td>77182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>January</td>\n",
+       "      <td>72867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>July</td>\n",
+       "      <td>83461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>June</td>\n",
+       "      <td>82720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>March</td>\n",
+       "      <td>86921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>May</td>\n",
+       "      <td>88425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>November</td>\n",
+       "      <td>62404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>October</td>\n",
+       "      <td>71427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>September</td>\n",
+       "      <td>70295</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     mes_nome  total_acidentes\n",
+       "0       April            81875\n",
+       "1      August            86176\n",
+       "2    December            46079\n",
+       "3    February            77182\n",
+       "4     January            72867\n",
+       "5        July            83461\n",
+       "6        June            82720\n",
+       "7       March            86921\n",
+       "8         May            88425\n",
+       "9    November            62404\n",
+       "10    October            71427\n",
+       "11  September            70295"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Agrupandos os itens por data e somando o total de acidentes pelo o mes\n",
+    "acidentes_por_mes = acidentes.\\\n",
+    "    groupby('mes_nome').\\\n",
+    "    size().\\\n",
+    "    reset_index(name='total_acidentes')\n",
+    "\n",
+    "\n",
+    "acidentes_por_mes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dia_semana</th>\n",
+       "      <th>total_acidentes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DOMINGO</td>\n",
+       "      <td>107617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>QUARTA-FEIRA</td>\n",
+       "      <td>127902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>QUINTA-FEIRA</td>\n",
+       "      <td>130761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SABADO</td>\n",
+       "      <td>134844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SEGUNDA-FEIRA</td>\n",
+       "      <td>133036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>SEXTA-FEIRA</td>\n",
+       "      <td>147925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>TERCA-FEIRA</td>\n",
+       "      <td>127747</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      dia_semana  total_acidentes\n",
+       "0        DOMINGO           107617\n",
+       "1   QUARTA-FEIRA           127902\n",
+       "2   QUINTA-FEIRA           130761\n",
+       "3         SABADO           134844\n",
+       "4  SEGUNDA-FEIRA           133036\n",
+       "5    SEXTA-FEIRA           147925\n",
+       "6    TERCA-FEIRA           127747"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Agrupandos os itens por data e somando o total de acidentes pela semana\n",
+    "acidentes_por_semana = acidentes.\\\n",
+    "    groupby('dia_semana').\\\n",
+    "    size().\\\n",
+    "    reset_index(name='total_acidentes')\n",
+    "\n",
+    "\n",
+    "acidentes_por_semana"
+   ]
   }
  ],
  "metadata": {
